<resources>
    <string name="app_name">HutTrackr</string>
    <string name="visitButton">Add Visit</string>
    <string name="visit">Visited</string>
    <string name="detailsButton">View Details</string>
    <string name="wishlist">Wishlist</string>
    <string name="huts">Huts</string>
    <string name="tracks">Tracks</string>
    <string name="pref">Preferences</string>
    <string name="menu">Menu</string>
    <string name="map">Map</string>
    <string name="hutName">Hut Name</string>
    <string name="hutIntro">Hut Description</string>
    <string name="hutCat">Hut Category</string>
    <string name="hutLocation">Hut Location</string>
    <string name="hutRegion">Hut Region</string>
    <string name="hutRoadEnd">Road End</string>
    <string name="hutLink">Hut Link</string>
    <string name="hutStatus">Hut Status</string>
    <string name="hutBunks">Hut Bunks</string>
    <string name="hutBookable">Hut Bookable</string>
    <string name="access_token">sk.eyJ1IjoiYWpsMTkwIiwiYSI6ImNrOXhyYWF6NTBuZmUzZG50MTUyaGdrb3gifQ.R84i59HagOTMUVfvV0VYhw</string>
    <string name="phoneDialog">Send to a friend</string>
    <string name="phoneNum">Mobile Number</string>
    <string name="smsMsg">Message</string>
    <string name="msgHint">Enter a brief message</string>
    <string name="phoneHint">Enter a mobile number</string>
    <string name="sendButton">Send</string>
</resources>
